# eqx-associative-rnn

./: README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
eqx_associative_rnn/: min_gru.py  min_gru_layer.py
tests/: test_min_gru.py  test_mingru.py  test_model_details.py  test_training_sinusoid.py
