[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "eqx-min-gru"
version = "0.0.1"
authors = [{ name = "Pierre-Louis Nordmann" }]
description = "Implementations of min-GRU using Jax and Equinox."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["jax>=0.6.0", "jaxtyping>=0.3.2", "equinox>=0.12.1"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[dependency-groups]
dev = ["optax>=0.2.5", "pytest>=8.3.5"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff.lint]
ignore = ["F722"]

[tool.pyrefly]
search_path = ["eqx_min_gru"]
